--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-leaflet|@react-leaflet|d3-*|axios))"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
